--- a/plots/benefits_income.html
+++ b/plots/benefits_income.html
@@ -35,10 +35,10 @@
 
 
 		//create margins
-		var margin = {top: 20, right: 300, bottom: 60, left: 70};
+		var margin = {top: 90, right: 300, bottom: 60, left: 70};
 
 		var width = 960 - margin.left - margin.right,
-  			height = 500 - margin.top - margin.bottom;
+  			height = 520 - margin.top - margin.bottom;
 
 		// JSON dataset of federal poverty federal_poverty_guidelines
  		// will be used to draw vertical lines at 100%, 130%, 185%, and 200% of fpg
@@ -120,8 +120,8 @@
 		 const poverty_levels = ['a', 'b', 'c', 'd', 'e']
 		 const poverty_text = ["100%", "130%", "185%", "200%", "210%"]
 
-			// import dataset
-			d3.csv("https://ff-plots.s3.amazonaws.com/data/total_income.csv", function(d) {
+			// import dataset "https://ff-plots.s3.amazonaws.com/data/total_income.csv"
+			d3.csv("total_income.csv", function(d) {
               return {
                 composition: d.composition,
                 monthly_income: +d.monthly_income,
@@ -151,13 +151,30 @@
 							.domain([0, d3.max(data, function(d) { return d.payment; })])
 							.range([height, 0]);
 
+			// scales for hourly rates
+			var xScaleHourly = d3.scaleLinear()
+							.domain([0, d3.max(data, function(d) {
+								return +((d.monthly_income / (40*4.35)).toFixed(2));
+							})])
+							.range([0, width]);
+
 			var dollarFormat = d3.format("$")
+
+			// create variable that will be hourly wages axis lables
+			// start at 7.25, which is NC and federal minimum wage
+			var hourlyAxis = [7.25];
+			for (var i = 10; i <= 30; i = i + 2) {
+    		hourlyAxis.push(i);
+			}
 
 			// axes
 			var xAxis = d3.axisBottom(xScale)
 										.tickFormat(dollarFormat)
 			var yAxis = d3.axisLeft(yScale)
 										.tickFormat(dollarFormat);
+			var xHourly = d3.axisTop(xScaleHourly)
+										.tickValues(hourlyAxis)
+										.tickFormat(dollarFormat)
 
 			// set the colour scale for lines
 			var color = d3.scaleOrdinal(d3.schemeSet2);
@@ -175,9 +192,7 @@
 			    .attr("height", height + margin.top + margin.bottom)
 			  .append("g")
 			    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-			///var legend_text = ["After-tax income",
-			///									 "SNAP, TANF, Housing, WIC",
-			///									 "SNAP, TANF, Housing, WIC, Child Care"]
+
 			// add legend
 			var legend = svg.selectAll('g')
 					//.data(function(d) {return legend_text;})
@@ -203,15 +218,6 @@
 				.attr("font-size", "14px");
 
 			// end legend
-
-			// add the X gridlines
-		  // svg.append("g")
-		  //     .attr("class", "grid")
-		  //     .attr("transform", "translate(0," + height + ")")
-		  //     .call(make_x_gridlines()
-		  //         .tickSize(-height)
-		  //         .tickFormat("")
-		  //     )
 
 		  // add the Y gridlines
 		  svg.append("g")
@@ -293,10 +299,10 @@
 
 								var fpl_threshold = single_fpl.levels[poverty_levels[i]]
 
-								svg.append('line')//.selectAll(".fgp_lines")
+								svg.append('line')
 									.attr("x1", xScale(fpl_threshold))
 									.attr("x2", xScale(fpl_threshold))
-									.attr("y1", height - 420)
+									.attr("y1", height - 370)
 									.attr("y2", height)
 									.style("stroke", "gray")
 									.style("stroke-width", 2)
@@ -305,8 +311,8 @@
 
 								svg.append('text')
 									.attr("x", xScale(fpl_threshold + 30))
-									.attr("y", height - 416)
-									.attr('transform', 'rotate(90 ' + xScale(fpl_threshold + 30) + ' ' + (height - 416) + ')')
+									.attr("y", height - 366)
+									.attr('transform', 'rotate(90 ' + xScale(fpl_threshold + 30) + ' ' + (height - 366) + ')')
 									.attr("font-size", "12px")
 									.text(poverty_text[i] + "  FPG")
 									.attr("class", poverty_levels[i]+"_text")
@@ -314,6 +320,15 @@
 
 								}
 								// end lines for federal poverty levels
+
+								// subtitle showing family type
+								svg.append("text")
+								        .attr("x", (width / 2))
+								        .attr("y", 0 - (margin.top / 2.3))
+								        .attr("text-anchor", "middle")
+								        .style("font-size", "14px")
+								        .text("Family size: " + family)
+												.attr('class', 'subtitle');
          	}
 
 			// Create initial graph
@@ -364,11 +379,16 @@
 						.transition()
 							.duration(1000)
 							.attr("x", xScale(fpl_threshold  + 30))
-							.attr('transform', 'rotate(90 ' + xScale(fpl_threshold + 30) + ' ' + (height - 416) + ')')
+							.attr('transform', 'rotate(90 ' + xScale(fpl_threshold + 30) + ' ' + (height - 366) + ')')
 
 				}
 
-				// end lines for poverty levels
+				// end lines for poverty level
+
+				// update household size subtiutle
+				svg.selectAll('.subtitle')
+				.transition()
+					.text("Family size: " + family)
 
 			}
 
@@ -474,6 +494,14 @@
           });
 			// end mouseover line --------------------------
 
+			// chart title
+			svg.append("text")
+			        .attr("x", (width / 2))
+			        .attr("y", 0 - (margin.top / 1.5))
+			        .attr("text-anchor", "middle")
+			        .style("font-size", "16px")
+			        .text("Forsyth County, NC income and benefits simulator");
+
 			// draw y axis with labels and move in from the size by the amount of padding
       svg.append("g")
       	.attr("class", "axis")
@@ -485,6 +513,12 @@
           .attr("class", "axis")
           .attr("transform", "translate(0," + (height) + ")")
           .call(xAxis);
+
+			// draw x axis for hourly wages with labels and move to the top of the chart area
+		  svg.append("g")
+				   .attr("class", "axis")
+				   .attr("transform", "translate(0," + 0 + ")")
+				   .call(xHourly);
 
 			// text label for the x axis
 		  svg.append("text")
