--- a/plots/benefits_cliff.html
+++ b/plots/benefits_cliff.html
@@ -37,92 +37,92 @@
 		//create margins
 		var margin = {top: 90, right: 220, bottom: 60, left: 70};
 
-		var width = 960 - margin.left - margin.right,
+		var width = 960 - margin.left - margin.right
   			height = 520 - margin.top - margin.bottom;
 
-		// JSON dataset of federal poverty federal_poverty_guidelines
-	 	// will be used to draw vertical lines at 100%, 130%, 185%, 200%, and 210% of fpg
+		// JSON dataset of federal poverty guidelines and state median income levels
+	 	// will be used to draw vertical lines at cliffs
+
+	  const poverty_levels = ['a', 'b', 'c', 'd', 'e']
+	  const poverty_text = ["50% AMI", "130% FPG", "185% FPG",
+													"210% FPG", "85% SMI"]
 
  		 const fpl = [{
  			 "name": "1 adult",
  			 "levels": {
- 				 "a": 1012,
+ 				 "a": 1808,
  				 "b": Math.round(1041 * 1.3),
  				 "c": Math.round(1041 * 1.85),
- 				 "d": Math.round(1041 * 2),
-				 "e": Math.round(1041 * 2.1)
+				 "d": Math.round(1041 * 2.1),
+				 "e": 2578
  			 }
  		 }, {
  			 "name": "1 adult, 1 child",
  			 "levels": {
- 				 "a": 1372,
+				 "a": 2067,
  				 "b": Math.round(1409 * 1.3),
  				 "c": Math.round(1409 * 1.85),
- 				 "d": Math.round(1409 * 2),
-				 "e": Math.round(1409 * 2.1)
+				 "d": Math.round(1409 * 2.1),
+				 "e": 3372
  			 }
  		 }, {
  			 "name": "1 adult, 2 children",
  			 "levels": {
- 				 "a": 1732,
+				 "a": 2325,
  				 "b": Math.round(1778 * 1.3),
  				 "c": Math.round(1778 * 1.85),
- 				 "d": Math.round(1778 * 2),
-				 "e": Math.round(1778 * 2.1)
+				 "d": Math.round(1778 * 2.1),
+				 "e": 4165
  			 }
  		 }, {
  			 "name": "1 adult, 3 children",
  			 "levels": {
- 				 "a": 2092,
+				 "a": 2579,
  				 "b": Math.round(2146 * 1.3),
  				 "c": Math.round(2146 * 1.85),
- 				 "d": Math.round(2146 * 2),
-				 "e": Math.round(2146 * 2.1)
+				 "d": Math.round(2146 * 2.1),
+				 "e": 4958
  			 }
  		 }, {
  			 "name": "2 adults",
  			 "levels": {
- 				 "a": 1372,
+				 "a": 2067,
  				 "b": Math.round(1409 * 1.3),
  				 "c": Math.round(1409 * 1.85),
- 				 "d": Math.round(1409 * 2),
-				 "e": Math.round(1409 * 2.1)
+				 "d": Math.round(1409 * 2.1),
+				 "e": 3372
  			 }
  		 }, {
  			 "name": "2 adults, 1 child",
  			 "levels": {
- 				 "a": 1732,
+				 "a": 2325,
  				 "b": Math.round(1778 * 1.3),
  				 "c": Math.round(1778 * 1.85),
- 				 "d": Math.round(1778 * 2),
-				 "e": Math.round(1778 * 2.1)
+				 "d": Math.round(1778 * 2.1),
+				 "e": 4165
  			 }
  		 }, {
  			 "name": "2 adults, 2 children",
  			 "levels": {
- 				 "a": 2092,
+				 "a": 2579,
  				 "b": Math.round(2146 * 1.3),
  				 "c": Math.round(2146 * 1.85),
- 				 "d": Math.round(2146 * 2),
-				 "e": Math.round(2146 * 2.1)
+				 "d": Math.round(2146 * 2.1),
+				 "e": 4958
  			 }
  		 }, {
  			 "name": "2 adults, 3 children",
  			 "levels": {
- 				 "a": 2452,
+				 "a": 2788,
  				 "b": Math.round(2514 * 1.3),
  				 "c": Math.round(2514 * 1.85),
- 				 "d": Math.round(2514 * 2),
-				 "e": Math.round(2514 * 2.1)
+				 "d": Math.round(2514 * 2.1),
+				 "e": 5752
  			 }
  		 }];
 
-		 const poverty_levels = ['a', 'b', 'c', 'd', 'e']
-		 const poverty_text = ["100%", "130%", "185%", "200%", "210%"]
-
-
-			// import dataset "https://ff-plots.s3.amazonaws.com/data/benefits.csv"
-			d3.csv("benefits.csv", function(d) {
+			// import dataset 
+			d3.csv("https://ff-plots.s3.amazonaws.com/data/benefits.csv", function(d) {
               return {
                 composition: d.composition,
                 monthly_income: +d.monthly_income,
@@ -312,7 +312,7 @@
 									.attr("y", height - 366)
 									.attr('transform', 'rotate(90 ' + xScale(fpl_threshold + 30) + ' ' + (height - 366) + ')')
 									.attr("font-size", "12px")
-									.text(poverty_text[i] + "  FPG")
+									.text(poverty_text[i])
 									.attr("class", poverty_levels[i]+"_text")
 									.style("fill", "gray")
 
@@ -520,9 +520,8 @@
 
 			// text label for the x axis
 		  svg.append("text")
-		      .attr("transform",
-		            "translate(" + (width/2) + " ," +
-		                           (height + margin.top + 30) + ")")
+					.attr("x", width/2)
+					.attr("y", (height + margin.bottom) - 15)
 		      .style("text-anchor", "middle")
 		      .text("Monthly Income");
 
@@ -535,13 +534,24 @@
 		      .style("text-anchor", "middle")
 		      .text("Monthly Benefit Amount");
 
-			// add text saying that FPG stands for federal poverty guidelines
-			svg.append("text")
-				.attr("x", 10 - margin.left)
-				.attr("y", (height + margin.bottom) - 5)
-				.text("*FPG = Federal Poverty Guideines")
-				.attr("fill", "gray")
-				.attr("font-size", "14px")
+			// add text explaning the abbreviations FPG, AMI, SMI
+			// use for loop
+			var abbreviations = ["FPG = Federal Poverty Guideines",
+													 "SMI = State Median Income",
+												 	 "AMI = Area Median Income"]
+
+			var abb_y = [26, 14, 2]
+
+			for(var i = 0; i < abbreviations.length; ++i) {
+
+				svg.append("text")
+					.attr("x", 10 - margin.left)
+					.attr("y", (height + margin.bottom) - abb_y[i])
+					.text(abbreviations[i])
+					.attr("fill", "gray")
+					.attr("font-size", "12px")
+
+				}
 
     });
 
