--- a/plots/cliff_cdf.html
+++ b/plots/cliff_cdf.html
@@ -54,7 +54,7 @@
  				 "b": Math.round(1041 * 1.3) * 12,
  				 "c": Math.round(1041 * 1.85) * 12,
 				 "d": Math.round(1041 * 2.1) * 12,
-				 "e": 2578
+				 "e": 2578 * 12
  			 }
  		 }, {
  			 "name": "1 adult, 1 child",
@@ -121,13 +121,14 @@
  			 }
  		 }];
 
-			// import dataset
+			// import dataset "https://ff-plots.s3.amazonaws.com/data/cliff_cdf.csv"
 			d3.csv("https://ff-plots.s3.amazonaws.com/data/cliff_cdf.csv", function(d) {
               return {
                 composition: d.composition,
                 income: +d.income,
                 cum_sum: +d.cum_sum,
                 perc_sum: d.perc_sum,
+                grouping: d.grouping
               };
             }).then(function(data) {
 
@@ -155,8 +156,7 @@
 			// axes
 			var xAxis = d3.axisBottom(xScale)
 										.tickFormat(dollarFormat)
-			var yAxis = d3.axisLeft(yScale)
-										.tickFormat(dollarFormat);
+			var yAxis = d3.axisLeft(yScale);
 
 			// set the colour scale for lines
 			var color = d3.scaleOrdinal(d3.schemeSet2);
@@ -188,6 +188,9 @@
   	  .key(function(d){
   	    return d.composition;
   	  })
+      .key(function(d){
+        return d.grouping;
+      })
   	  .entries(data);
 
 			// variable for vertical lines
@@ -439,7 +442,7 @@
                 }
 
                 d3.select(this).select('text')
-                  .text("$" + yScale.invert(pos.y).toFixed(2))
+                  .text(Math.round(yScale.invert(pos.y)))
 									.style("font-size", "12px");
 
                 return "translate(" + mouse[0] + "," + pos.y +")";
@@ -453,7 +456,7 @@
 			        .attr("y", 0 - (margin.top / 1.5))
 			        .attr("text-anchor", "middle")
 			        .style("font-size", "16px")
-			        .text("Forsyth County, NC benefits cliff simulator");
+			        .text("Forsyth County, NC Household Incomes");
 
 			// draw y axis with labels and move in from the size by the amount of padding
       svg.append("g")
@@ -472,7 +475,7 @@
 					.attr("x", width/2)
 					.attr("y", (height + margin.bottom) - 15)
 		      .style("text-anchor", "middle")
-		      .text("Total Yearly Income");
+		      .text("Total yearly income");
 
 			// text label for the y axis
 		  svg.append("text")
@@ -481,7 +484,7 @@
 		      .attr("x",0 - (height / 2))
 		      .attr("dy", "1em")
 		      .style("text-anchor", "middle")
-		      .text("Total County Population at Income Level");
+		      .text("Number of households at or below income level");
 
 			// add text explaning the abbreviations FPG, AMI, SMI
 			// use for loop
