--- a/plots/cliff_cdf.html
+++ b/plots/cliff_cdf.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Benefits cliff</title>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
+		<script src="thresholds.js"></script>
 		<style type="text/css">
 			.line {
               fill: none;
@@ -39,60 +40,6 @@
 
 		var width = 960 - margin.left - margin.right
   			height = 520 - margin.top - margin.bottom;
-
-		// JSON dataset of federal poverty guidelines and state median income levels
-	 	// will be used to draw vertical lines at cliffs
-
-	  const poverty_levels = ['a', 'b', 'c', 'd', 'e']
-	  const poverty_text = ["50% AMI", "130% FPG", "185% FPG",
-													"210% FPG", "85% SMI"]
-
- 		 const fpl = [{
- 			 "name": "1",
- 			 "levels": {
- 				 "a": 1808 * 12,
- 				 "b": Math.round(1041 * 1.3) * 12,
- 				 "c": Math.round(1041 * 1.85) * 12,
-				 "d": Math.round(1041 * 2.1) * 12,
-				 "e": 2578 * 12
- 			 }
- 		 }, {
- 			 "name": "2",
- 			 "levels": {
-				 "a": 2067 * 12,
- 				 "b": Math.round(1409 * 1.3) * 12,
- 				 "c": Math.round(1409 * 1.85) * 12,
-				 "d": Math.round(1409 * 2.1) * 12,
-				 "e": 3372 * 12
- 			 }
- 		 }, {
- 			 "name": "3",
- 			 "levels": {
-				 "a": 2325 * 12,
- 				 "b": Math.round(1778 * 1.3) * 12,
- 				 "c": Math.round(1778 * 1.85) * 12,
-				 "d": Math.round(1778 * 2.1) * 12,
-				 "e": 4165 * 12
- 			 }
- 		 }, {
- 			 "name": "4",
- 			 "levels": {
-				 "a": 2579 * 12,
- 				 "b": Math.round(2146 * 1.3) * 12,
- 				 "c": Math.round(2146 * 1.85) * 12,
-				 "d": Math.round(2146 * 2.1) * 12,
-				 "e": 4958 * 12
- 			 }
- 		 }, {
- 			 "name": "5",
- 			 "levels": {
-				 "a": 2788 * 12,
- 				 "b": Math.round(2514 * 1.3) * 12,
- 				 "c": Math.round(2514 * 1.85) * 12,
-				 "d": Math.round(2514 * 2.1) * 12,
-				 "e": 5752 * 12
- 			 }
- 		 }];
 
 			// import dataset "https://ff-plots.s3.amazonaws.com/data/cliff_cdf.csv"
 			d3.csv("https://ff-plots.s3.amazonaws.com/data/cliff_cdf.csv", function(d) {
@@ -217,7 +164,7 @@
 						// pull out poverty levels for family size, based on family composition selected
 						// from drop down
 						for(var i = 0; i < fpl.length; ++i) {
-							if(fpl[i].name == family) {
+							if(fpl[i].size == family) {
 								 var single_fpl = fpl[i]
 								 { break; }
 							 }
@@ -225,7 +172,8 @@
 
 						 for(var i = 0; i < poverty_levels.length; ++i) {
 
-								var fpl_threshold = single_fpl.levels[poverty_levels[i]]
+							 	// thresholds are monthly thresholds, so multiply by 12 for yearly
+								var fpl_threshold = single_fpl.levels[poverty_levels[i]] * 12
 
 								svg.append('line')
 									.attr("x1", xScale(fpl_threshold))
@@ -292,7 +240,7 @@
 
 				// add lines for poverty poverty_levels
 				for(var i = 0; i < fpl.length; ++i) {
-					if(fpl[i].name == family) {
+					if(fpl[i].size == family) {
 						 var single_fpl = fpl[i]
 						 { break; }
 					 }
@@ -300,7 +248,7 @@
 
 				 for(var i = 0; i < poverty_levels.length; ++i) {
 
-						var fpl_threshold = single_fpl.levels[poverty_levels[i]]
+						var fpl_threshold = single_fpl.levels[poverty_levels[i]] * 12
 
 						svg.selectAll("."+poverty_levels[i])
 						.transition()
@@ -468,8 +416,7 @@
 			// add text explaning the abbreviations FPG, AMI, SMI
 			// use for loop
 			var abbreviations = ["FPG = Federal Poverty Guideines",
-													 "SMI = State Median Income",
-												 	 "AMI = Area Median Income"]
+													 "SMI = State Median Income"]
 
 			var abb_y = [26, 14, 2]
 
