--- a/plots/cliff_cdf.html
+++ b/plots/cliff_cdf.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Benefits cliff</title>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
-		<script src="thresholds.js"></script>
+		<script src="https://ff-plots.s3.amazonaws.com/thresholds.js"></script>
 		<style type="text/css">
 			.line {
               fill: none;
