--- a/plots/cliff_cdf.html
+++ b/plots/cliff_cdf.html
@@ -41,7 +41,7 @@
 		var width = 960 - margin.left - margin.right
   			height = 520 - margin.top - margin.bottom;
 
-			// import dataset "https://ff-plots.s3.amazonaws.com/data/cliff_cdf.csv"
+			// import dataset
 			d3.csv("https://ff-plots.s3.amazonaws.com/data/cliff_cdf.csv", function(d) {
               return {
                 size: d.size,
