update number of beneficiaries plot

--- a/plots/number_benefits.html
+++ b/plots/number_benefits.html
@@ -21,13 +21,13 @@
               marginBottom: 180
           },
           title: {
-              text: 'Number of public benefit enrollees in Forsyth County'
+              text: 'Number of benefit enrollees in Forsyth County'
           },
           subtitle: {
           		text: '<b>Sources</b><br>' +
             '- <i>FNS:</i>  https://www.fns.usda.gov/pd/supplemental-nutrition-assistance-program-snap<br>' +
             '- <i>Child Care:</i>  https://ncchildcare.ncdhhs.gov/Home/DCDEE-Sections/Subsidy-Services/Fact-Sheets<br>' +
-            '- <i>Housing Choice:</i>  http://www.haws.org/index.php/housing/87-housing-choice-voucher-section-8-housing/116-housing-choice-voucher-section-8-program-eligibility<br>' +
+            '- <i>Housing Choice:</i>  https://www.huduser.gov/portal/datasets/assthsg.html<br>' +
             '- <i>Work First:</i>  https://www.ncdhhs.gov/divisions/social-services/program-statistics-and-reviews/work-first-caseload-statistics<br>' +
             '- <i>Health Care:</i>  https://medicaid.ncdhhs.gov/documents/reports/enrollment-reports/medicaid-and-health-choice-enrollment-reports',
               verticalAlign: 'bottom',
@@ -40,7 +40,7 @@
                 'Child Care Subsidy<br><i>2018</i>',
                 'Housing Choice Voucher<br><i>2018</i>',
                 'Work First<br><i>May 2019</i>',
-                'Aid to Families with Dep. Children<br><i>May 2019</i>',
+                'Medicaid for Families with Dep. Children<br><i>May 2019</i>',
                 'Medicaid for Infants and Children<br><i>May 2019</i>',
                 'NC Health Choice<br><i>May 2019</i>'
                 ],
