fix mistake in number of enrollees plot

--- a/plots/number_benefits.html
+++ b/plots/number_benefits.html
@@ -40,7 +40,7 @@
                 'Child Care Subsidy<br><i>2018</i>',
                 'Housing Choice Voucher<br><i>2018</i>',
                 'Work First<br><i>May 2019</i>',
-                'Medicaid for Families with Dep. Children<br><i>May 2019</i>',
+                'Medicaid for Families w/ Dep. Children<br><i>May 2019</i>',
                 'Medicaid for Infants and Children<br><i>May 2019</i>',
                 'NC Health Choice<br><i>May 2019</i>'
                 ],
@@ -90,10 +90,10 @@
           },
           series: [{
               name: 'Individuals',
-              data: [46392, 10402, 2914, 559, 23965, 19067, 4064]
+              data: [46392, 2914, 10402, 559, 23965, 19067, 4064]
           }, {
               name: 'Households',
-              data: [25079, 3936, null, 334, null, null, null]
+              data: [25079, null, 3936, 334, null, null, null]
           }
           ]
       });
