--- a/plots/benefits_cliff.html
+++ b/plots/benefits_cliff.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Benefits cliff</title>
+		<link rel="shortcut icon" href="#" />
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script src="https://ff-plots.s3.amazonaws.com/thresholds.js"></script>
 		<style type="text/css">
