--- a/plots/benefits_cliff.html
+++ b/plots/benefits_cliff.html
@@ -3,6 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="#" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.min.js" integrity="sha256-45YA33UQCDcJsntBst2bhka2t/LBNHP7RNvpllHPkQ0=" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.1.1/es6-promise.auto.min.js" integrity="sha256-OI3N9zCKabDov2rZFzl8lJUXCcP7EmsGcGoP6DMXQCo=" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/fetch/2.0.4/fetch.min.js" integrity="sha256-eOUokb/RjDw7kS+vDwbatNrLN8BIvvEhlLM5yogcDIo=" crossorigin="anonymous"></script>
 		<script src="https://d3js.org/d3.v5.min.js"></script>
 		<script src="https://ff-plots.s3.amazonaws.com/thresholds.js"></script>
 		<style type="text/css">
