update minimum eight of highchart

--- a/plots/benefits_income_highcharts.html
+++ b/plots/benefits_income_highcharts.html
@@ -18,7 +18,7 @@
 			<OPTION VALUE="G">2 adults, 2 children</option>
 			<OPTION VALUE="H">2 adults, 3 children</option>
 	</SELECT>
-		<div id="container" style=max-width:900px></div>
+		<div id="container" style="max-width:900px; min-height:400px"></div>
     <script type="text/javascript">
 
 		var options = {
