update min height of resize chart

--- a/plots/benefits_income_resize.html
+++ b/plots/benefits_income_resize.html
@@ -33,7 +33,7 @@
 	</head>
 	<body>
 	  <div id = "familyDropdown" class="dropdown">Select Family Size:  </div>
-		<div id="container"></div>
+		<div id="container" style="max-width:900px; min-height:400px"></div>
 		<script type="text/javascript">
 
 		// breakpoint to rescale for mobile
