set d3 chart height at 400 if width is small

--- a/plots/benefits_income_resize.html
+++ b/plots/benefits_income_resize.html
@@ -72,7 +72,16 @@
 
 		  // Set new width and height based on graph dimensions
 		  width = w - margin.left - margin.right;
-		  height = h - margin.top - margin.bottom;
+
+			if (current_width > breakPoint) {
+
+		  	height = h - margin.top - margin.bottom;
+
+			} else {
+
+				height = 300;
+
+			}
 
 		};
 
