--- a/plots/benefits_income_highcharts.html
+++ b/plots/benefits_income_highcharts.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="shortcut icon" href="#" />
 		<script src="https://code.highcharts.com/highcharts.js"></script>
-		<script src="http://code.highcharts.com/modules/exporting.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
@@ -32,9 +32,10 @@
 
 		subtitle: { text: 'One adult'},
 
-		credits: {
-				enabled: false
-		},
+    credits: {
+        text: 'Forsyth Futures',
+        href: 'http://forsythfutures.org'
+    },
 
 		colors: ["#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd", "#8c564b"],
 		// ["#78b98f", "#6633b4", "#4289c0", "#315c31", "#e65201", "#1f4196"],
@@ -100,9 +101,17 @@
             },
             chartOptions: {
 							chart: {
-                height: 300
-									}
-                }
+                height: 350
+									},
+									
+							 title: { text: 'Benefits Cliff' },
+                
+          		yAxis: {
+        				title: {
+        						text: 'Monthly Benefit'
+        				}
+          		}
+            }
 						}]},
 
     series: [
