--- a/plots/benefits_income_resize.html
+++ b/plots/benefits_income_resize.html
@@ -33,11 +33,11 @@
 	</head>
 	<body>
 	  <div id = "familyDropdown" class="dropdown">Select Family Size:  </div>
-		<div id="container" style="max-width:900px; min-height:400px"></div>
+		<div id="container" style="max-width:900px"></div>
 		<script type="text/javascript">
 
 		// breakpoint to rescale for mobile
-		var breakPoint = 600
+		var breakPoint = 800
 
 		// Set default width and height, calculate ratio
 		var default_width = 850;
@@ -56,7 +56,7 @@
 		  current_width = window.innerWidth;
 		  current_height = window.innerHeight;
 
-			margin.right = (current_width < breakPoint) ? 30 : 270;
+			margin.right = (current_width < breakPoint) ? 30 : margin.right;
 
 		  current_ratio = current_width / current_height;
 
@@ -73,7 +73,7 @@
 		  // Set new width and height based on graph dimensions
 		  width = w - margin.left - margin.right;
 
-			height = (current_width < breakPoint) ? 300 : h - margin.top - margin.bottom;
+			height = (current_width < 400) ? 100 : h - margin.top - margin.bottom;
 
 		}
 
@@ -499,7 +499,7 @@
 			        .attr("y", 0 - (margin.top / 1.5))
 			        .attr("text-anchor", "middle")
 							.style("font-size", (current_width > breakPoint) ? '16px' : '14px')
-			        .text((current_width > breakPoint) ? "Forsyth County, NC income and benefits simulator" : "Income and benefits simulator");
+			        .text((current_width > breakPoint) ? "Forsyth County, NC income and benefits simulator" : "Income and benefits simulator2");
 
 			// draw y axis with labels and move in from the size by the amount of padding
       svg.append("g")
@@ -562,5 +562,6 @@
 
 
 		</script>
+		<p>"-----"</p>
 	</body>
 </html>
