--- a/plots/benefits_income_resize.html
+++ b/plots/benefits_income_resize.html
@@ -37,7 +37,7 @@
 		<script type="text/javascript">
 
 		// breakpoint to rescale for mobile
-		var breakPoint = 600
+		var breakPoint = 800
 
 		// Set default width and height, calculate ratio
 		var default_width = 850;
@@ -73,7 +73,7 @@
 		  // Set new width and height based on graph dimensions
 		  width = w - margin.left - margin.right;
 
-			height = (current_width < breakPoint) ? 300 : h - margin.top - margin.bottom;
+			height = (current_width < 400) ? 300 : h - margin.top - margin.bottom;
 
 		}
 
