--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -37,8 +37,8 @@
         href: 'http://forsythfutures.org'
     },
 
-		colors: ["#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd", "#8c564b"],
-		// ["#78b98f", "#6633b4", "#4289c0", "#315c31", "#e65201", "#1f4196"],
+		colors: ["rgb(53,97,143,.8)", "rgb(30,212,107,.8)", "rgb(239,111,204,.8)", "rgb(97,197,230,.8)", "rgb(118,7,150,.8)"],
+		///["#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd", "#8c564b"],
 
 		yAxis: {
 				max: 2500,
