remove legend from cdf

--- a/plots/cliff_cdf_hc.html
+++ b/plots/cliff_cdf_hc.html
@@ -34,8 +34,9 @@
         href: 'http://forsythfutures.org'
     },
 
-		colors: ["#1f77b4", "#ff7f0e", "#2ca02c", "#d62728", "#9467bd", "#8c564b"],
-		// ["#78b98f", "#6633b4", "#4289c0", "#315c31", "#e65201", "#1f4196"],
+		legend: {
+				enabled: false
+		},
 
 		yAxis: {
 				max: 60000,
