resize plots for mobile

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -18,7 +18,7 @@
 			<OPTION VALUE="G">2 adults, 2 children</option>
 			<OPTION VALUE="H">2 adults, 3 children</option>
 	</SELECT>
-		<div id="container" style="max-width:900px"></div>
+		<div id="container" style="max-width:800px"></div>
     <script type="text/javascript">
 
 		var options = {
@@ -102,10 +102,16 @@
             },
             chartOptions: {
 							chart: {
-                height: 350
+                height: 250
 									},
 
-							 title: { text: 'Benefits Cliff' },
+							 title: { text: null },
+
+							 subtitle: { text: 'Touch lines to know benefit' },
+							 
+							 legend: {
+                  enabled: false
+              },
 
           		yAxis: {
         				title: {
