--- a/plots/benefits_income_hc.html
+++ b/plots/benefits_income_hc.html
@@ -18,7 +18,7 @@
 			<OPTION VALUE="G">2 adults, 2 children</option>
 			<OPTION VALUE="H">2 adults, 3 children</option>
 	</SELECT>
-		<div id="container" style="max-width:900px"></div>
+		<div id="container" style="max-width:800px"></div>
     <script type="text/javascript">
 		var options = {
     chart: {
@@ -90,9 +90,13 @@
             },
             chartOptions: {
 							chart: {
-                height: 350
+                height: 250
 									},
-							 title: { text: 'Benefits and Income' },
+							 title: { text: null },
+							 subtitle: { text: 'Touch lines to know group' },
+							 legend: {
+                  enabled: false
+              },
           		yAxis: {
         				title: {
         						text: 'Income plus benefits'
