--- a/plots/cliff_cdf_hc.html
+++ b/plots/cliff_cdf_hc.html
@@ -15,7 +15,7 @@
 			<OPTION VALUE="D">4</option>
 			<OPTION VALUE="E">5</option>
 	</SELECT>
-		<div id="container" style="max-width:900px"></div>
+		<div id="container" style="max-width:800px"></div>
     <script type="text/javascript">
 
 		var options = {
@@ -74,10 +74,12 @@
             },
             chartOptions: {
 							chart: {
-                height: 350
+                height: 250
 									},
 
-							 title: { text: 'Household incomes' },
+							 title: { text: null },
+
+							 subtitle: { text: "Number of households below income levels"},
 
           		yAxis: {
         				title: {
