remove height restriction

--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -25,7 +25,7 @@
     chart: {
         renderTo: 'container',
         defaultSeriesType: 'line',
-				height: '70%'
+				height: '85%'
     },
 
 		title: { text: 'Forsyth County, NC Benefits Cliff' },
@@ -101,14 +101,14 @@
                 maxWidth: 400
             },
             chartOptions: {
-							chart: {
-                height: 250
-									},
+							//chart: {
+              //  height: 250
+							//		},
 
 							 title: { text: null },
 
 							 subtitle: { text: 'Touch lines to know benefit' },
-							 
+
 							 legend: {
                   enabled: false
               },
