--- a/plots/benefits_income_hc.html
+++ b/plots/benefits_income_hc.html
@@ -24,7 +24,7 @@
     chart: {
         renderTo: 'container',
         defaultSeriesType: 'line',
-				height: '70%'
+				height: '85%'
     },
 		title: { text: 'Forsyth County, NC income and benefits' },
 		subtitle: { text: 'One adult'},
@@ -89,9 +89,9 @@
                 maxWidth: 400
             },
             chartOptions: {
-							chart: {
-                height: 250
-									},
+							// chart: {
+              //   height: 250
+							// 		},
 							 title: { text: null },
 							 subtitle: { text: 'Touch lines to know group' },
 							 legend: {
