--- a/plots/cliff_cdf_hc.html
+++ b/plots/cliff_cdf_hc.html
@@ -22,7 +22,7 @@
     chart: {
         renderTo: 'container',
         defaultSeriesType: 'line',
-				height: '70%'
+				height: '85%'
     },
 
 		title: { text: 'Forsyth County, NC household incomes' },
@@ -73,9 +73,9 @@
                 maxWidth: 400
             },
             chartOptions: {
-							chart: {
-                height: 250
-									},
+							// chart: {
+              //   height: 250
+							// 		},
 
 							 title: { text: null },
 
