--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -18,14 +18,14 @@
 			<OPTION VALUE="G">2 adults, 2 children</option>
 			<OPTION VALUE="H">2 adults, 3 children</option>
 	</SELECT>
-		<div id="container" style="max-width:800px"></div>
+		<div id="container" style="max-width:700px"></div>
     <script type="text/javascript">
 
 		var options = {
     chart: {
         renderTo: 'container',
         defaultSeriesType: 'line',
-				height: '85%'
+				height: '75%'
     },
 
 		title: { text: 'Forsyth County, NC Benefits Cliff' },
@@ -110,6 +110,10 @@
 							 subtitle: { text: 'Touch lines to know benefit' },
 
 							 legend: {
+                  enabled: false
+              },
+              
+              credits: {
                   enabled: false
               },
 
