--- a/plots/cliff_cdf_hc.html
+++ b/plots/cliff_cdf_hc.html
@@ -15,14 +15,14 @@
 			<OPTION VALUE="D">4</option>
 			<OPTION VALUE="E">5</option>
 	</SELECT>
-		<div id="container" style="max-width:800px"></div>
+		<div id="container" style="max-width:700px"></div>
     <script type="text/javascript">
 
 		var options = {
     chart: {
         renderTo: 'container',
         defaultSeriesType: 'line',
-				height: '85%'
+				height: '75%'
     },
 
 		title: { text: 'Forsyth County, NC household incomes' },
@@ -80,6 +80,10 @@
 							 title: { text: null },
 
 							 subtitle: { text: "Number of households below income levels"},
+							 
+              credits: {
+                  enabled: false
+              },
 
           		yAxis: {
         				title: {
