remove hourly income axis for small window

--- a/plots/benefits_income_hc.html
+++ b/plots/benefits_income_hc.html
@@ -100,6 +100,16 @@
               credits: {
                   enabled: false
               },
+							xAxis: {
+								type: 'linear',
+								id: 'monthly',
+								title: {
+										text: 'Monthly Income'
+								},
+								labels: {
+										format: '${value}'
+								}
+							},
           		yAxis: {
         				title: {
         						text: 'Income plus benefits'
