--- a/plots/benefits_cliff_hc.html
+++ b/plots/benefits_cliff_hc.html
@@ -64,7 +64,7 @@
 			id: 'hourly',
 			title: {
 					text: 'Full-time Hourly Wage',
-					align: 'low'
+					align: 'low',
 			},
 			opposite: true,
 			linkedTo: 0,
@@ -98,12 +98,23 @@
 		responsive: {
         rules: [{
             condition: {
-                maxWidth: 400
+                maxWidth: 500
             },
             chartOptions: {
 							//chart: {
               //  height: 250
 							//		},
+
+							xAxis: {
+								type: 'linear',
+								id: 'monthly',
+								title: {
+										text: 'Monthly Income'
+								},
+								labels: {
+										format: '${value}'
+								}
+							},
 
 							 title: { text: null },
 
@@ -112,7 +123,7 @@
 							 legend: {
                   enabled: false
               },
-              
+
               credits: {
                   enabled: false
               },
