--- a/plots/cliff_cdf_hc.html
+++ b/plots/cliff_cdf_hc.html
@@ -80,10 +80,21 @@
 							 title: { text: null },
 
 							 subtitle: { text: "Number of households below income levels"},
-							 
+
               credits: {
                   enabled: false
               },
+
+							xAxis: {
+								type: 'linear',
+								id: 'monthly',
+								title: {
+										text: 'Monthly Income'
+								},
+								labels: {
+										format: '${value}'
+								}
+							},
 
           		yAxis: {
         				title: {
